<resources>
    <string name="app_name">Vibric Mobile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_terminal">Терминал</string>
    <string name="title_configuration">Конфигурация</string>
    <string name="title_settings">Настройки</string>
    <string name="title_devices">Устройства</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="read">Прочитать</string>
    <string name="next">Продолжить</string>
    <string name="synchronize_time">Синхронизировать время</string>
    <string name="freq_resolution">Частотное разрешение</string>
    <string name="sample_size">Размер выборки</string>
    <string name="launch_time">Время запуска</string>
    <string name="end_time">Время окончания</string>
    <string name="date_time">дд.мм.гггг, чч.мм</string>
    <string name="configure">Сконфигурировать</string>
    <string name="clear">Очистить</string>

    <string name="device_id_key">deviceId</string>
    <string name="port_number_key">portNum</string>
    <string name="baud_rate_key">baudRate</string>
    <string name="with_io_manager_key">withIoManager</string>
    <string name="device_name_key">device</string>
    <string name="command_key">command</string>
</resources>