<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/devicesFragment">

    <fragment
        android:id="@+id/navigation_terminal"
        android:name="by.diplom.vibric_mobile_v2.ui.terminal.TerminalFragment"
        android:label="@string/title_terminal"
        tools:layout="@layout/fragment_terminal" />

    <fragment
        android:id="@+id/navigation_configuration"
        android:name="by.diplom.vibric_mobile_v2.ui.configuration.ConfigurationFragment"
        android:label="@string/title_configuration"
        tools:layout="@layout/fragment_configuration" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="by.diplom.vibric_mobile_v2.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/devicesFragment"
        android:name="by.diplom.vibric_mobile_v2.ui.devices.DevicesFragment"
        android:label="@string/title_devices"
        tools:layout="@layout/fragment_devices" >
        <action
            android:id="@+id/action_devicesFragment_to_navigation_terminal"
            app:destination="@id/navigation_terminal" />
    </fragment>
</navigation>